[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/GameEntity.gd" type="Script" id=1]
[ext_resource path="res://assets/test_assets.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.189944, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=3]
gradient = SubResource( 2 )
fill = 1
fill_from = Vector2( 0.5, 0.5 )
fill_to = Vector2( 0.5, 0.2 )

[node name="GameEntity" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 1 )

[node name="Model" type="Sprite" parent="."]
rotation = 1.57079
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 32, 0, 16, 16 )

[node name="ViewBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ViewCone" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ViewCone"]
rotation = 1.57079
polygon = PoolVector2Array( 0, 0, -32, -40, 32, -40 )

[node name="MoveTween" type="Tween" parent="."]

[node name="ViewRay" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 16 )
collision_mask = 3

[node name="Light" type="Light2D" parent="."]
visible = false
position = Vector2( 1.52588e-05, -1.52588e-05 )
scale = Vector2( 6, 6 )
texture = SubResource( 3 )
mode = 2
range_z_max = 3
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_buffer_size = 256

[connection signal="body_entered" from="ViewCone" to="." method="_on_ViewCone_body_entered"]
[connection signal="body_exited" from="ViewCone" to="." method="_on_ViewCone_body_exited"]
